<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="jp.co.se.android.RadioCafe_new.MainActivity" >
    <item
        android:id="@+id/comiradi"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/comiradi"/>
    <item
        android:id="@+id/genre"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/genre"/>
    <item
        android:id="@+id/onair"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/onair"/>
    <item
        android:id="@+id/today_program"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/today_program"/>
    <item
        android:id="@+id/method"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/method"/>
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/about"/>
    <item
        android:id="@+id/disaster"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/disaster"/>
    <item
        android:id="@+id/tunein_apk"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/tunein"/>
    <item
        android:id="@+id/ustream"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/ustream"/>
    <item
        android:id="@+id/youtube"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/youtube"/>
    <item
        android:id="@+id/facebook"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/facebook"/>
    <item
        android:id="@+id/twitter"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/twitter"/>
    <item
        android:id="@+id/description"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/description"/>
    <item
        android:id="@+id/mail"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/mail"/>
    <item
        android:id="@+id/reload"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_refresh"
        android:title=""/>
    <item
        android:id="@+id/share"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_share"
        android:title=""/>
</menu>
